bk_ida/gccida/c2/expand_compound_operation
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6050:4: error: expected ';' after expression
rtx v26; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6050:5: error: use of undeclared identifier 'v26'
rtx v26; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6101:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6104:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v11.rtwint = ( __int64)x[1].fld[0]; 
                       ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6111:29: error: use of undeclared identifier 'machine_mode'
v12 = gen_rtx_fmt_e( USE, ( machine_mode)BYTE2( v2), rtx); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6112:18: error: expected expression
do_SUBST( ( rtx *)x->fld, v12); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6121:38: error: use of undeclared identifier 'machine_mode'
v13 = nonzero_bits( x->fld[0].rtx, ( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2)); 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6126:35: error: use of undeclared identifier 'machine_mode'
x = gen_rtx_fmt_e( ZERO_EXTEND, ( machine_mode)BYTE2( v2), v14); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6140:40: error: use of undeclared identifier 'machine_mode'
v18 = nonzero_bits( v15->fld[0].rtx, ( machine_mode)v17); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6154:29: error: expected expression
v30 = nonzero_bits( *( rtx *)( x->fld[0].rtwint + 8), ( machine_mode)v29); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6154:57: error: use of undeclared identifier 'machine_mode'
v30 = nonzero_bits( *( rtx *)( x->fld[0].rtwint + 8), ( machine_mode)v29); 
                                                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6155:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v31.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6157:16: error: expected expression
return *( rtx *)( v31.rtwint + 8); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6161:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6169:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v22.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6186:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6189:36: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v26 = simplify_shift_const( 0LL, ( rtx_code)( v3 + 89), ( machine_mode)v23, v27, ( int)v24 - ( int)v8); 
                                   ^~~~~~~~
                                   rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6189:54: error: too few arguments to function call, expected 2, have 1
v26 = simplify_shift_const( 0LL, ( rtx_code)( v3 + 89), ( machine_mode)v23, v27, ( int)v24 - ( int)v8); 
                                 ~~~~~~~~~~~         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/rtl.h:1787:1: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/combine.c:6189:59: error: use of undeclared identifier 'machine_mode'
v26 = simplify_shift_const( 0LL, ( rtx_code)( v3 + 89), ( machine_mode)v23, v27, ( int)v24 - ( int)v8); 
                                                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/expand_compound_operation/src/obj/combine.o] Error 1
